Styling for mobile compatibility
*Adjusted grid for multiple sizes
*Added favicon
*Typographic style changes

--- a/public/partials/blog.html
+++ b/public/partials/blog.html
@@ -15,7 +15,7 @@
                            <div class="blog-thumbnail-inner">
                                <div class="background-overlay"></div>
                                <div class="text-overlay">
-                                   <div class="text-overlay-inner">
+                                   <div class="text-overlay-inner center-block">
                                         <p class="quote">I stared at those 4 words and realized that I could not stand before a room of people and brag for 3 minutes. And it was a horrible and humbling realization.
                                         </p>
                                         <p class="continue-text">Continue reading &rarr;</p>
@@ -43,7 +43,7 @@
                             <div class="blog-thumbnail-inner">
                                 <div class="background-overlay"></div>
                                 <div class="text-overlay">
-                                    <div class="text-overlay-inner">
+                                    <div class="text-overlay-inner center-block">
                                          <p class="quote">Brag pitching is an amazing way to push beyond your comfort zone, get to know people, and improve on key skills like public speaking.
                                          </p>
                                          <p class="continue-text">Continue reading &rarr;</p>
@@ -71,7 +71,7 @@
                              <div class="blog-thumbnail-inner">
                                  <div class="background-overlay"></div>
                                  <div class="text-overlay">
-                                     <div class="text-overlay-inner">
+                                     <div class="text-overlay-inner center-block">
                                           <p class="quote">It seemed like a simple task: to stand before a group of my peers and talk about what I’m good at and what I’m proud of. For 3 minutes. No more, no less, and definitely no slide deck. Just me and my accomplishments.
                                           </p>
                                           <p class="continue-text">Continue reading &rarr;</p>
@@ -99,7 +99,7 @@
                               <div class="blog-thumbnail-inner">
                                   <div class="background-overlay"></div>
                                   <div class="text-overlay">
-                                      <div class="text-overlay-inner">
+                                      <div class="text-overlay-inner center-block">
                                            <p class="quote">Many of life’s decisions involve a tug-of-war between our personal and professional priorities.
                                            </p>
                                            <p class="continue-text">Continue reading &rarr;</p>
@@ -127,7 +127,7 @@
                                <div class="blog-thumbnail-inner">
                                    <div class="background-overlay"></div>
                                    <div class="text-overlay">
-                                       <div class="text-overlay-inner">
+                                       <div class="text-overlay-inner center-block">
                                             <p class="quote">I am fearful of reaching out and talking about my business to investors but I obviously can’t tell anyone that because that makes me sound like a chicken. It’s an irrational, internalized fear.
                                             </p>
                                             <p class="continue-text">Continue reading &rarr;</p>
@@ -154,7 +154,7 @@
                                 <div class="blog-thumbnail-inner">
                                     <div class="background-overlay"></div>
                                     <div class="text-overlay">
-                                        <div class="text-overlay-inner">
+                                        <div class="text-overlay-inner center-block">
                                              <p class="quote">A unicycle, a unicorn and red nose. With these 3 things you get children and adults laughing, and what’s better than making people laugh?
                                              </p>
                                              <p class="continue-text">Continue reading &rarr;</p>
@@ -182,7 +182,7 @@
                                  <div class="blog-thumbnail-inner">
                                      <div class="background-overlay"></div>
                                      <div class="text-overlay">
-                                         <div class="text-overlay-inner">
+                                         <div class="text-overlay-inner center-block">
                                               <p class="quote">I should have stood up for the strategy and vision I had for my business unit and employees. Allowing myself to fall into the pressure of pleasing everybody contributed to the failure of the whole company.
                                               </p>
                                               <p class="continue-text">Continue reading &rarr;</p>
@@ -210,7 +210,7 @@
                                    <div class="blog-thumbnail-inner">
                                        <div class="background-overlay"></div>
                                        <div class="text-overlay">
-                                           <div class="text-overlay-inner">
+                                           <div class="text-overlay-inner center-block">
                                                 <p class="quote">Founding a start-up as couple might sound ideal. It’s true that having a significant other as a co-founder brings a lot of advantages, including mutual support and strong trust, but it can also be challenging.
                                                 </p>
                                                 <p class="continue-text">Continue reading &rarr;</p>
@@ -238,7 +238,7 @@
                                      <div class="blog-thumbnail-inner">
                                          <div class="background-overlay"></div>
                                          <div class="text-overlay">
-                                             <div class="text-overlay-inner">
+                                             <div class="text-overlay-inner center-block">
                                                   <p class="quote">If I had a client call 2 years ago, I will unearth exactly what was discussed from my stack of checkered moleskines before following up.
                                                   </p>
                                                   <p class="continue-text">Continue reading &rarr;</p>
@@ -267,7 +267,7 @@
                                        <div class="blog-thumbnail-inner">
                                            <div class="background-overlay"></div>
                                            <div class="text-overlay">
-                                               <div class="text-overlay-inner">
+                                               <div class="text-overlay-inner center-block">
                                                     <p class="quote">I worked with my “significant other” for 5 years on startups. He was a dreamy programmer who wanted to change the world, and I was a geeky engineer who loved inventing.
                                                     </p>
                                                     <p class="continue-text">Continue reading &rarr;</p>
@@ -295,7 +295,7 @@
                                          <div class="blog-thumbnail-inner">
                                              <div class="background-overlay"></div>
                                              <div class="text-overlay">
-                                                 <div class="text-overlay-inner">
+                                                 <div class="text-overlay-inner center-block">
                                                       <p class="quote">I’m neither a victim, nor a battered woman. I’ve never been overlooked for a job due to my gender (or at least not that I know of). So really, why should I care about gender equality?
                                                       </p>
                                                       <p class="continue-text">Continue reading &rarr;</p>
@@ -323,7 +323,7 @@
                                            <div class="blog-thumbnail-inner">
                                                <div class="background-overlay"></div>
                                                <div class="text-overlay">
-                                                   <div class="text-overlay-inner">
+                                                   <div class="text-overlay-inner center-block">
                                                         <p class="quote">As a woman in business, the topic of confidence tends to be a sensitive one. Some believe you need more of it, or that you need to “fake it ‘till you make it.” I tend to agree.
                                                         </p>
                                                         <p class="continue-text">Continue reading &rarr;</p>
@@ -351,7 +351,7 @@
                                              <div class="blog-thumbnail-inner">
                                                  <div class="background-overlay"></div>
                                                  <div class="text-overlay">
-                                                     <div class="text-overlay-inner">
+                                                     <div class="text-overlay-inner center-block">
                                                           <p class="quote">The first TEDxSantiagoWomen took place at the Main Auditorium of the Law Faculty at Universidad de Chile in December 2013.
                                                           </p>
                                                           <p class="continue-text">Continue reading &rarr;</p>
@@ -379,7 +379,7 @@
                                                <div class="blog-thumbnail-inner">
                                                    <div class="background-overlay"></div>
                                                    <div class="text-overlay">
-                                                       <div class="text-overlay-inner">
+                                                       <div class="text-overlay-inner center-block">
                                                             <p class="quote">Though few and far between, you’ve found yourself amongst an emerging group of female founders.
                                                             </p>
                                                             <p class="continue-text">Continue reading &rarr;</p>
@@ -406,13 +406,14 @@
                                              <a href="mailto:holafew@gmail.com" target="_blank">
                                                  <div class="blog-thumbnail-inner">
                                                      <div class="background-overlay"></div>
-                                                     <div class="text-overlay always-show">
-                                                         <div class="text-overlay-inner">
+                                                     <div class="text-overlay always-show blog-contact">
+                                                         <div class="text-overlay-inner blog-inner center-block">
                                                               <p class="quote">If you're interested in submitting a written piece to our growing collection, we would love to be in touch! Let us know at holafew@gmail.com.
                                                               </p>
                                                           </div>
                                                      </div>                       
-                                                          <div class="blog-contact"></div>
+                                                          <img src="https://d262ilb51hltx0.cloudfront.net/fit/c/1800/1440/gradv/29/81/60/darken/25/1*Ll-C9wItbZAkgwRoqGyjCA.jpeg" 
+                                                              class="thumbnail img-responsive">
                                                   </div>
                                                 </a>
                                           </li>
