--- a/public/partials/connect.html
+++ b/public/partials/connect.html
@@ -1,10 +1,10 @@
-<div class="col-md-4 col-md-offset-4 top-spacer">
+<div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1 top-spacer">
     <h2>Connect</h2>
         <div class="col-md-12">
             <div class="subhead-line center-block"></div>
         </div>
         <div class="row">
-            <div class="col-md-12 section-intro">
+            <div class="col-md-8 col-md-offset-2 section-intro">
                 <p>Stay updated on what we're up to and our events around the world, read original blogs written by the members of FEW, and engage in meaningful discussions about gender equality and entrepreneurship. Let's keep in touch!</p>
 
                 <p>— <a href="http://medium.com/@holafew" target="_blank">Our Blog on Medium</a></p>
