--- a/public/partials/events.html
+++ b/public/partials/events.html
@@ -1,10 +1,10 @@
-<div class="col-md-4 col-md-offset-4 top-spacer">
+<div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1 top-spacer">
     <h2>Events</h2>
         <div class="col-md-12">
             <div class="subhead-line center-block"></div>
         </div>
         <div class="row">
-            <div class="col-md-12 section-intro">
+            <div class="col-md-8 col-md-offset-2 section-intro">
                 <div class="event-divider">
                     <h6>April 2014 (Exact Date TBC)</h6>
                     <h6>Santiago, Chile</h6>
