--- a/public/partials/mission.html
+++ b/public/partials/mission.html
@@ -1,10 +1,10 @@
-<div class="col-md-4 col-md-offset-4 top-spacer">
+<div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1 top-spacer">
     <h2>Mission</h2>
         <div class="col-md-12">
             <div class="subhead-line center-block"></div>
         </div>
         <div class="row">
-            <div class="col-md-12 section-intro">
+            <div class="col-md-8 col-md-offset-2 section-intro">
                 <p>Female Entrepreneurs of the World (FEW) is an international organization that supports gender equality and the advancement of women in entrepreneurship. FEW provides a community for entrepreneurs to share experiences in the hopes that transparency of information will inspire others in their entrepreneurial journey.</p>
 
                 <p>FEW was formed by a self-organized group of female founders from around the world who met through <a href="http://startupchile.org" target="_blank">Startup Chile</a>. Members of FEW organize workshops, share resources openly, and discuss gender bias, entrepreneurship, and founder dilemmas through regularly published blog articles.</p>
