--- a/public/partials/statistics.html
+++ b/public/partials/statistics.html
@@ -1,12 +1,12 @@
-<div class="col-md-6 col-md-offset-3 top-spacer">
+<div class="col-md-12 col-sm-12 col-xs-12 top-spacer">
     <h2>Statistics</h2>
     <div class="col-md-6 col-md-offset-3">
         <div class="subhead-line center-block"></div>
     </div>
     <div class="row">
         
-        <div class="col-md-4">  
-            <div class="center-block stat-column">      
+        <div class="col-md-4 col-sm-4 col-xs-12">  
+            <div class="center-block left-column pull-left">      
                 <div class="stat-header">{{participants.length}} Total Contributors</div>
                 <ul class="list-unstyled">
                     <li ng-repeat="participant in participants"
@@ -22,15 +22,15 @@
             </div>
         </div>
         
-        <div class="col-md-4">
-            <div class="center-block stat-column">            
+        <div class="col-md-4 col-sm-4 col-xs-12">
+            <div class="center-column pull-left">            
                 <div class="stat-header">{{countries.length}} Countries Represented</div>
                 <ul class="list-unstyled">
                     <li ng-repeat="country in countries"
                         class="stat-list">
                         <div class="row">
-                            <div class="col-md-1">{{country.count}}</div>
-                            <div class="col-md-10 stat-name-space">{{country.long_name}}</div>
+                            <div class="col-md-1 col-sm-2 col-xs-2">{{country.count}}</div>
+                            <div class="col-md-10 col-sm-9 col-xs-9 stat-name-space">{{country.long_name}}</div>
                         </div>
                     </li>
                 </ul>
@@ -38,8 +38,8 @@
         </div>
         
         
-        <div class="col-md-4">  
-            <div class="center-block stat-column">
+        <div class="col-md-4 col-sm-4 col-xs-12">  
+            <div class="center-block right-column pull-left">
                 <div class="stat-header">{{founders.length}} Startups Founded by Women</div>
                 <ul class="list-unstyled">
                     <li ng-repeat="founder in founders"
