--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -62,7 +62,7 @@ h7 {
   top: 100px;
 }
 .view-bottom-spacer {
-  height: 50px;
+  height: 600px;
 }
 .page-container.expanded {
   height: 100%;
@@ -158,14 +158,14 @@ h7 {
 }
 a {
   text-decoration: none !important;
-  color: #6600FF;
+  color: gray;
 }
 a:hover,
 a:focus {
   color: #6600FF !important;
 }
 a:visited {
-  color: #6600FF;
+  color: gray;
 }
 /*
 a .main-header {
@@ -205,12 +205,12 @@ a .main-header:visited {
 .container-overlay div {
   font-weight: 400;
   letter-spacing: 1px;
-  font-size: 14px;
+  font-size: 15px;
   color: #404040;
-  line-height: 25px;
+  line-height: 26px;
 }
 a .nav-links {
-  font-weight: 500;
+  font-weight: 400;
   color: #6600FF;
   font-size: 12px;
   letter-spacing: 3px;
@@ -237,10 +237,11 @@ a .nav-links:visited {
   -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
   transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
 }
-.container-overlay input {
+.memberform-field {
   border: 1px solid #CCCCFF;
   display: block;
   height: 44px;
+  width: 100%;
   padding: 6px 12px;
   font-size: 14px;
   letter-spacing: 2px;
@@ -250,6 +251,9 @@ a .nav-links:visited {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
   transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+}
+.container-overlay textarea {
+  width: 100%;
 }
 .input-wrapper {
   height: 32px;
@@ -284,7 +288,7 @@ a .nav-links:visited {
 }
 /* Info pop-up styling start */
 .few-info {
-  min-width: 300px;
+  max-width: 300px;
   padding: 15px 0px 7px 12px;
 }
 .few-info.few-thanks {
@@ -368,7 +372,12 @@ form {
   padding-right: 0px;
 }
 input.checkbox-input {
-  height: 21px;
+  height: 18px;
+}
+.few-checkbox {
+  font-style: italic;
+  font-size: 14px;
+  font-weight: normal;
 }
 .participate-form.errors input.ng-invalid,
 .participate-form.errors input.place.error {
@@ -380,6 +389,7 @@ input.checkbox-input {
 }
 .save-btn {
   height: 52px;
+  width: 100%;
   color: white;
   background-color: #6600FF;
   margin-top: 19px;
@@ -405,6 +415,15 @@ input.checkbox-input {
 }
 /* Participate end */
 /* Statistics start */
+.center-column {
+  width: 226px;
+}
+.left-column {
+  width: 200px;
+}
+.right-column {
+  width: 294px;
+}
 .animate-show {
   opacity: 1;
   -webkit-transition: all linear 1s;
@@ -478,9 +497,7 @@ input.checkbox-input {
 /* Principals start */
 .principal-container {
   padding-bottom: 40px;
-}
-.principal-container.right {
-  margin-left: 14px;
+  width: 240px;
 }
 .principal-name a {
   font-weight: 700 !important;
@@ -502,6 +519,10 @@ input.checkbox-input {
 .principal-text {
   cursor: pointer;
   margin-top: -5px;
+  margin-bottom: 18px;
+}
+.principal-text-description {
+  max-width: 500px;
 }
 .stat-list {
   line-height: 40px;
@@ -554,6 +575,7 @@ div.stat-header {
 }
 .blog-thumbnail-inner {
   max-width: 95%;
+  min-width: 210px;
   position: relative;
   margin-left: auto;
   margin-right: auto;
@@ -592,8 +614,9 @@ div.stat-header {
   line-height: 19px;
   font-size: 13px;
 }
-.text-overlay {
-  padding: 40px;
+.text-overlay-inner {
+  max-width: 80%;
+  padding-top: 8%;
 }
 .text-overlay.always-show {
   opacity: 1;
@@ -641,8 +664,82 @@ p.continue-text {
   color: white;
 }
 .blog-contact {
-  width: 315px;
-  height: 252px;
   background-color: #6600FF;
+  padding: 0;
+}
+.text-overlay-inner.blog-inner {
+  max-width: 80%;
+  padding-top: 8%;
 }
 /* Blog end */
+/* Mobile support */
+/* Extra small devices (phones, less than 768px) */
+/* No media query since this is the default in Bootstrap */
+@media (max-width: 767px) {
+  .page-container {
+    top: 500px;
+  }
+  .view-bottom-spacer {
+    min-height: 550px;
+  }
+  .nav-line {
+    width: 100%;
+  }
+  .navbar-nav {
+    margin: 0px;
+  }
+  .center-column,
+  .right-column {
+    margin-top: 25px;
+  }
+}
+/* Small devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+  .principal-container {
+    float: left;
+  }
+  .principal-container.left {
+    float: right;
+  }
+  .view-bottom-spacer {
+    min-height: 550px;
+  }
+  .center-column {
+    margin-left: auto;
+    margin-right: auto;
+    float: none !important;
+  }
+  .left-column {
+    float: right !important;
+  }
+  .right-column {
+    float: left;
+  }
+  .text-overlay p.quote {
+    line-height: 21px;
+    font-size: 16px;
+  }
+}
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+  .view-bottom-spacer {
+    min-height: 50px;
+  }
+  .text-overlay p.quote {
+    line-height: 14px;
+    font-size: 11px;
+  }
+}
+/* Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+  .text-overlay p.quote {
+    line-height: 16px;
+    font-size: 12px;
+  }
+}
+@media (min-width: 1400px) {
+  .text-overlay p.quote {
+    line-height: 19px;
+    font-size: 14px;
+  }
+}
