Make navigation mobile compatible
Fixed nag to make for small devices.
Styling changes to support mobile.

--- a/public/partials/statistics.html
+++ b/public/partials/statistics.html
@@ -5,7 +5,7 @@
     </div>
     <div class="row">
         
-        <div class="col-md-4 col-sm-4 col-xs-12">  
+        <div class="col-md-4 col-sm-4 col-xs-10 col-xs-offset-1">  
             <div class="center-block left-column pull-left">      
                 <div class="stat-header">{{participants.length}} Total Contributors</div>
                 <ul class="list-unstyled">
@@ -22,7 +22,7 @@
             </div>
         </div>
         
-        <div class="col-md-4 col-sm-4 col-xs-12">
+        <div class="col-md-4 col-sm-4 col-xs-10 col-xs-offset-1">
             <div class="center-column pull-left">            
                 <div class="stat-header">{{countries.length}} Countries Represented</div>
                 <ul class="list-unstyled">
@@ -38,7 +38,7 @@
         </div>
         
         
-        <div class="col-md-4 col-sm-4 col-xs-12">  
+        <div class="col-md-4 col-sm-4 col-xs-10 col-xs-offset-1">  
             <div class="center-block right-column pull-left">
                 <div class="stat-header">{{founders.length}} Startups Founded by Women</div>
                 <ul class="list-unstyled">
