--- a/public/partials/events.html
+++ b/public/partials/events.html
@@ -1,10 +1,10 @@
-<div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1 top-spacer">
+<div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1 top-spacer">
     <h2>Events</h2>
         <div class="col-md-12">
             <div class="subhead-line center-block"></div>
         </div>
         <div class="row">
-            <div class="col-md-8 col-md-offset-2 section-intro">
+            <div class="col-md-8 col-md-offset-2 col-lg-10 col-lg-offset-1 section-intro">
                 <div class="event-divider">
                     <h6>April 2014 (Exact Date TBC)</h6>
                     <h6>Santiago, Chile</h6>
@@ -53,7 +53,7 @@
                     </a>
                     <p>
                         <a href="https://www.facebook.com/events/448780538556922/" target="_blank">
-                            <img src="https://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-prn1/t31.0-8/883866_10102777883775453_844019930_o.jpg" width="550px" style="padding-top:10px;">
+                            <img class="img-responsive" src="https://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-prn1/t31.0-8/883866_10102777883775453_844019930_o.jpg" width="550px" style="padding-top:10px;">
                         </a>
                     </p>
                 </div>
@@ -77,7 +77,7 @@
                     </a>
                     <p>
                         <a href="http://tedxsantiago.com/women.html" target="_blank">
-                            <img src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-ash3/t31.0-8/1465785_648882455164055_697153128_o.jpg" width="650px" style="padding-top:10px;">
+                            <img class="img-responsive" src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-ash3/t31.0-8/1465785_648882455164055_697153128_o.jpg" width="650px" style="padding-top:10px;">
                         </a>
                     </p>
                     <p>
