--- a/public/partials/participate.html
+++ b/public/partials/participate.html
@@ -1,20 +1,19 @@
-<div class="row">
-    <div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1 top-spacer">
+<div class="col-lg-4 col-lg-offset-4 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1 top-spacer">
     <h2>Project FEW</h2>
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-12 col-sm-12">
             <div class="subhead-line center-block"></div>
         </div>
     </div>   
     <div class="row">
-        <div class="col-md-12 col-sm-12 col-xs-12 section-intro">
+        <div class="col-md-12 col-sm-12 section-intro">
             <p>Calling all female entrepreneurs! If you’re a female founder or working at an early-stage company, we want you to put yourself on the map.</p>
             <p>The goal of Project FEW is to identify and build an open network of women from all around the world who are undertaking new ventures of all disciplines, from healthcare to the arts.</p>
             <p style="font-weight:700;">Add yourself to the map and join our growing network.</p>
         </div>
     </div>    
     <div class="row">
-        <div class="col-md-12 col-sm-12 col-xs-12">
+        <div class="col-md-12 col-sm-12">
             <form role='form'
                 name="memberform" 
                 class="participate-form"
@@ -43,21 +42,21 @@
                         </div>
                     </div>
                 </div>
-                    <div class="form-group">
-                        <div class="row">
-                            <div class="col-md-12 col-sm-12 col-xs-12">
-                                <input type="email" 
-                                    name="email"
-                                    class="memberform-field"
-                                    placeholder="Email Address* (We won't share this with anyone)" 
-                                    ng-model="member.email"
-                                    required />
-                            </div>
-                        </div>
-                    </div>
                 <div class="form-group">
                     <div class="row">
-                        <div class="col-md-12 col-sm-12 col-xs-12">
+                        <div class="col-md-12 col-sm-12">
+                            <input type="email" 
+                                name="email"
+                                class="memberform-field"
+                                placeholder="Email Address* (We won't share this with anyone)" 
+                                ng-model="member.email"
+                                required />
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="row">
+                        <div class="col-md-12 col-sm-12">
                             <input type="text" 
                                 class="place memberform-field"
                                 ng-class="{error:invalidPlace}"
@@ -72,7 +71,7 @@
                 </div>
                 <div class="form-group">
                     <div class="row">
-                        <div class="col-md-12 col-sm-12 col-xs-12">
+                        <div class="col-md-12 col-sm-12">
                             <input type="text" 
                                 class="memberform-field"
                                 name="companyname"
@@ -85,7 +84,7 @@
                 </div>
                 <div class="form-group">
                     <div class="row">
-                        <div class="col-md-12 col-sm-12 col-xs-12">
+                        <div class="col-md-12 col-sm-12">
                             <input type="url" 
                                 name="companyurl"
                                 class="memberform-field"
@@ -96,19 +95,19 @@
                 </div>
                 <div class="form-group">
                     <div class="row">
-                        <div class="col-md-12 col-sm-12 col-xs-12">
-                        <input type="text" 
-                            name="role"
-                            class="memberform-field"
-                            placeholder="Role (ex. Developer, Designer, Co-founder)" 
-                            capitalize-first
-                            ng-model="member.role" />
+                        <div class="col-md-12 col-sm-12">
+                            <input type="text" 
+                                name="role"
+                                class="memberform-field"
+                                placeholder="Role (ex. Developer, Designer, Co-founder)" 
+                                capitalize-first
+                                ng-model="member.role" />
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="row">
-                        <div class="col-md-12 col-sm-12 col-xs-12">
+                        <div class="col-md-12 col-sm-12">
                             <textarea 
                                 rows="2"
                                 name="companydescription"
@@ -119,9 +118,9 @@
                         </div>
                     </div>
                 </div>
-              
+          
                 <div class="row">
-                    <div class="col-md-12 col-sm-12 col-xs-12">
+                    <div class="col-md-12 col-sm-12">
                         <label class="few-checkbox">
                             <input type="checkbox"
                                 name="isfemalefounder" 
@@ -130,25 +129,26 @@
                         </label>
                     </div>
                 </div>
-                
-                <div class="form-group server-info-error"
-                    ng-show='serverErrorMsg'>
+            
+                <div class="form-group server-info-error" ng-show="serverErrorMsg">
                     <div class="row">
-                        <div>{{serverErrorMsg}}</div>
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="row">
-                    <div class="col-md-12 col-sm-12 col-xs-12">
-                        <button class="btn btn-default save-btn" ng-submit="add(member)">SAVE</button>
+                        <div class="col-md-12 col-sm-12">
+                            {{serverErrorMsg}}
+                        </div>
                     </div>
                 </div>
-            </div>
-        </form>
+                <div class="form-group">
+                    <div class="row">
+                        <div class="col-md-12 col-sm-12">
+                            <button class="btn btn-default save-btn" ng-submit="add(member)">SAVE</button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div> 
     </div> 
-</div> 
-<div class="row">
-    <div class="col-md-12 view-bottom-spacer">        
+    <div class="row">
+        <div class="col-md-12 col-sm-12 view-bottom-spacer">        
+        </div>
     </div>
 </div>    
-</div>
