--- a/public/partials/statistics.html
+++ b/public/partials/statistics.html
@@ -1,11 +1,12 @@
-<div class="col-md-12 col-sm-12 col-xs-12 top-spacer">
+<div class="col-xs-10 col-xs-offset-1 top-spacer">
     <h2>Statistics</h2>
-    <div class="col-md-6 col-md-offset-3">
-        <div class="subhead-line center-block"></div>
+    <div class="row">
+        <div class="col-lg-4 col-lg-offset-4 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+            <div class="subhead-line center-block"></div>
+        </div>
     </div>
     <div class="row">
-        
-        <div class="col-md-4 col-sm-4 col-xs-10 col-xs-offset-1">  
+        <div class="col-md-4 col-sm-12 col-xs-12">  
             <div class="center-block left-column pull-left">      
                 <div class="stat-header">{{participants.length}} Total Contributors</div>
                 <ul class="list-unstyled">
@@ -22,7 +23,7 @@
             </div>
         </div>
         
-        <div class="col-md-4 col-sm-4 col-xs-10 col-xs-offset-1">
+        <div class="col-md-4 col-sm-12 col-xs-12">
             <div class="center-column pull-left">            
                 <div class="stat-header">{{countries.length}} Countries Represented</div>
                 <ul class="list-unstyled">
@@ -38,7 +39,7 @@
         </div>
         
         
-        <div class="col-md-4 col-sm-4 col-xs-10 col-xs-offset-1">  
+        <div class="col-md-4 col-sm-12 col-xs-12">  
             <div class="center-block right-column pull-left">
                 <div class="stat-header">{{founders.length}} Startups Founded by Women</div>
                 <ul class="list-unstyled">
@@ -51,10 +52,6 @@
                 </ul>
             </div>
         </div>
-        
-    
-
-        
         
     </div>
     <div class="row">
