--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -851,19 +851,14 @@ p.continue-text {
         min-height: 550px;
     }
     
-    .center-column {
+    .center-column,
+    .left-column,
+    .right-column {
         margin-left: auto;
         margin-right: auto;
         float: none !important;
     }
     
-    .left-column {
-        float: right !important;
-    }
-    
-    .right-column {
-        float: left;
-    }
     
     .text-overlay p.quote {
         line-height: 21px;
@@ -882,6 +877,15 @@ p.continue-text {
         line-height: 14px;
         font-size: 11px;
     }
+    
+    .left-column {
+        float: right !important;
+    }
+    
+    .right-column {
+        float: left;
+    }
+    
 }
 
 
